--- a/src/app/account/account.component.scss
+++ b/src/app/account/account.component.scss
@@ -19,7 +19,7 @@
     align-items: flex-start;
     margin-bottom: 16px;
     strong {
-        color: var(--primary-col);
+        color: var(--md-primary-col);
         border-bottom: solid 1px rgba(0, 0, 0, .12);
         margin-bottom: 4px;
     }
