--- a/src/app/dialog-auth-errors/dialog-auth-errors.component.scss
+++ b/src/app/dialog-auth-errors/dialog-auth-errors.component.scss
@@ -6,7 +6,7 @@
         margin: 0;
     }
     i {
-        color: var(--primary-col);
+        color: var(--md-primary-col);
         font-size: 32px;
     }
 }
