--- a/src/app/dialog-edit-user/dialog-edit-user.component.scss
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.scss
@@ -31,6 +31,6 @@
         top: 50%;
         left: 50%;
         opacity: 0;
-        color: var(--primary-col);
+        color: var(--md-primary-col);
     }
 }
