add imprint and index structure

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,28 +1,42 @@
 <div class="content">
-    <h1>Datenschutzerklärung</h1>
-    <h2 id="m14">Einleitung</h2>
-    <p>Mit der folgenden Datenschutzerklärung möchten wir Sie darüber aufklären, welche Arten Ihrer personenbezogenen Daten (nachfolgend auch kurz als "Daten“ bezeichnet) wir zu welchen Zwecken und in welchem Umfang verarbeiten. Die Datenschutzerklärung
-        gilt für alle von uns durchgeführten Verarbeitungen personenbezogener Daten, sowohl im Rahmen der Erbringung unserer Leistungen als auch insbesondere auf unseren Webseiten, in mobilen Applikationen sowie innerhalb externer Onlinepräsenzen, wie
-        z.B. unserer Social-Media-Profile (nachfolgend zusammenfassend bezeichnet als "Onlineangebot“).</p>
-    <p>Die verwendeten Begriffe sind nicht geschlechtsspezifisch.</p>
+    <h1>Rechtliche Hinweise</h1>
     <p>Stand: 11. Dezember 2022</p>
     <h2>Inhaltsübersicht</h2>
-    <ul class="index">
-        <li><a class="index-link" href="#m14">Einleitung</a></li>
-        <li><a class="index-link" href="#m3">Verantwortlicher</a></li>
-        <li><a class="index-link" href="#mOverview">Übersicht der Verarbeitungen</a></li>
-        <li><a class="index-link" href="#m13">Maßgebliche Rechtsgrundlagen</a></li>
-        <li><a class="index-link" href="#m27">Sicherheitsmaßnahmen</a></li>
-        <li><a class="index-link" href="#m25">Übermittlung von personenbezogenen Daten</a></li>
-        <li><a class="index-link" href="#m24">Datenverarbeitung in Drittländern</a></li>
-        <li><a class="index-link" href="#m12">Löschung von Daten</a></li>
-        <li><a class="index-link" href="#m367">Registrierung, Anmeldung und Nutzerkonto</a></li>
-        <li><a class="index-link" href="#m432">Community Funktionen</a></li>
-        <li><a class="index-link" href="#m451">Single-Sign-On-Anmeldung</a></li>
-        <li><a class="index-link" href="#m15">Änderung und Aktualisierung der Datenschutzerklärung</a></li>
-        <li><a class="index-link" href="#m10">Rechte der betroffenen Personen</a></li>
-        <li><a class="index-link" href="#m42">Begriffsdefinitionen</a></li>
-    </ul>
+    <ol class="index">
+        <li><a class="index-link" href="#m14">Impressum</a></li>
+        <li>
+            <a class="index-link" href="#m14">Datenschutzerklärung</a>
+            <ul>
+                <li><a class="index-link" href="#m3">Verantwortlicher</a></li>
+                <li><a class="index-link" href="#mOverview">Übersicht der Verarbeitungen</a></li>
+                <li><a class="index-link" href="#m13">Maßgebliche Rechtsgrundlagen</a></li>
+                <li><a class="index-link" href="#m27">Sicherheitsmaßnahmen</a></li>
+                <li><a class="index-link" href="#m25">Übermittlung von personenbezogenen Daten</a></li>
+                <li><a class="index-link" href="#m24">Datenverarbeitung in Drittländern</a></li>
+                <li><a class="index-link" href="#m12">Löschung von Daten</a></li>
+                <li><a class="index-link" href="#m367">Registrierung, Anmeldung und Nutzerkonto</a></li>
+                <li><a class="index-link" href="#m432">Community Funktionen</a></li>
+                <li><a class="index-link" href="#m451">Single-Sign-On-Anmeldung</a></li>
+                <li><a class="index-link" href="#m15">Änderung und Aktualisierung der Datenschutzerklärung</a></li>
+                <li><a class="index-link" href="#m10">Rechte der betroffenen Personen</a></li>
+                <li><a class="index-link" href="#m42">Begriffsdefinitionen</a></li>
+            </ul>
+        </li>
+    </ol>
+
+    <h1>1. Impressum</h1>
+    <h2>Angaben gemäß § 5 TMG:</h2>
+    <p><br>Daniel JOHANNSEN, Lukas VOLGGER, Thomas DANIELSE</p>
+    <h3>Postanschrift:</h3>
+    <p><br></p>
+    <h3>Kontakt:</h3>
+    <p>Telefon: <br>E-Mail: </p>
+    <p></p>
+    <p><br></p>
+    <p></p>
+    <h2>Hinweise zur Website</h2>
+    <p></p>
+    <p><em>Das Impressum wurde mit dem <a href="https://www.activemind.de/datenschutz/impressums-generator/">Impressums-Generator der activeMind AG</a> erstellt.</em></p>
     <h2 id="m3">Verantwortlicher</h2>
     <p>Daniel JOHANNSEN, Lukas VOLGGER, Thomas DANIELSE</p>
     E-Mail-Adresse:
