--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -2,6 +2,13 @@
     padding: 32px;
 }
 
+.up-btn {
+    position: fixed;
+    right: 32px;
+    bottom: 32px;
+    background-color: var(--primary-col) !important;
+}
+
 header {
     background-color: #f5f5f5;
     padding: 16px;
