--- a/src/app/legal-notice/legal-notice.component.scss
+++ b/src/app/legal-notice/legal-notice.component.scss
@@ -9,6 +9,15 @@
     background-color: var(--primary-col) !important;
 }
 
+a {
+    text-decoration: none;
+    color: #1264a3;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 header {
     background-color: #f5f5f5;
     padding: 16px;
