refactor imprint and contact

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -35,18 +35,34 @@
     <h2 id="imprint">1. Impressum</h2>
 
     <h3>Angaben gemäß § 5 TMG:</h3>
+    <!-- TODO ADD Address and Email (Daniel/Thomas) -->
     <ul>
-        <li>Daniel JOHANNSEN</li>
-        <li>Lukas VOLGGER</li>
-        <li>Thomas DANIELSE</li>
+        <li>
+            <span>Daniel JOHANNSEN</span>
+            <ul>
+                <li><strong>Email: </strong> <a href="mailto: ">WIP</a></li>
+                <li><strong>Adresse: </strong>WIP</li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            <span>Lukas VOLGGER</span>
+            <ul>
+                <li><strong>Email: </strong> <a href="mailto: contact@lukas-volgger.at">contact@lukas-volgger.at</a></li>
+                <li><strong>Telefon: </strong> <a href="tel: +436643573619">+43 664 3573619</a></li>
+                <li><strong>Adresse: </strong>Josef-Schöpf-Straße 3/8A, 6410 Telfs, ÖSTERREICH</li>
+            </ul>
+        </li>
+        <br>
+        <li>
+            <span>Thomas DANIELSE</span>
+            <ul>
+                <li><strong>Email: </strong> <a href="mailto: ">WIP</a></li>
+                <li><strong>Adresse: </strong>WIP</li>
+            </ul>
+        </li>
     </ul>
-    <h3>Postanschrift:</h3>
     <p><br></p>
-    <h3>Kontakt:</h3>
-    <p>Telefon: <br>E-Mail: </p>
-    <p></p>
-    <p><br></p>
-    <p></p>
     <h3>Hinweise zur Website</h3>
     <p></p>
     <p><em>Das Impressum wurde mit dem <a href="https://www.activemind.de/datenschutz/impressums-generator/">Impressums-Generator der activeMind AG</a> erstellt.</em></p>
@@ -59,8 +75,6 @@
         <li>Lukas VOLGGER</li>
         <li>Thomas DANIELSE</li>
     </ul>
-    E-Mail-Adresse:
-    <p>contact@lukas-volgger.at</p>
 
     <h3 id="processing-overview">Übersicht der Verarbeitungen</h3>
     <p>Die nachfolgende Übersicht fasst die Arten der verarbeiteten Daten und die Zwecke ihrer Verarbeitung zusammen und verweist auf die betroffenen Personen.</p>
