feat render chat

--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,14 +1,17 @@
 <div class="chatroom">
     <h2> {{ channel.channelName }} </h2>
 
-    <mat-card class="">
-        <div class="post-headline">
-            <!-- <img class="profile" src="assets\img\male.png"> -->
-        </div>
-        <div>
-            First post!
-        </div>
-    </mat-card>
+    <div class="massages">
+        <mat-card class="message" *ngFor="let message of this.messages">
+            <div class="post-headline">
+                <!-- <img class="profile" src="{{ message.photoURL }">  -->
+                {{ message.displayName }}
+            </div>
+            <div>
+                {{ message.message }}
+            </div>
+        </mat-card>
+    </div>
 
 
     <div class="message-container">
