--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -1,154 +1,161 @@
 .mat-drawer-container {
-  height: 100vh;
-  background-color: rgb(231, 231, 231);
+    height: 100vh;
+    background-color: rgb(231, 231, 231);
 }
 
 .menu-icon {
-  margin-right: 50px;
-  &:hover {
-    cursor: pointer;
-  }
+    margin-right: 50px;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .sidenav {
-  width: 300px;
-  background-color: rgb(84, 21, 84);
-  color: white;
+    width: 300px;
+    background-color: rgb(84, 21, 84);
+    color: white;
 }
 
 .logo-container {
-  border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
-  padding-left: 12px;
-  padding-right: 16px;
-  min-height: 35px;
-  display: flex;
-  align-items: center;
-  background-color: rgb(64, 18, 64);
-  img {
-    height: 30px;
-  }
+    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
+    padding-left: 12px;
+    padding-right: 16px;
+    min-height: 35px;
+    display: flex;
+    align-items: center;
+    background-color: rgb(64, 18, 64);
+    img {
+        height: 30px;
+    }
 }
 
 mat-toolbar,
 mat-toolbar-row {
-  min-height: 36px;
-  height: 36px;
-  background-color: rgb(64, 18, 64);
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .header-left {
+    min-height: 36px;
+    height: 36px;
+    background-color: rgb(64, 18, 64);
+    color: white;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-  }
+    .header-left {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .menu-items {
-  list-style-type: none;
-  padding: 0;
-  margin: 16px 0 32px 16px;
-  li {
-    padding-left: 16px;
-    padding-right: 16px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    mat-icon {
-      margin-right: 16px;
+    list-style-type: none;
+    padding: 0;
+    margin: 16px 0 32px 16px;
+    li {
+        padding-left: 16px;
+        padding-right: 16px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        mat-icon {
+            margin-right: 16px;
+        }
+        &:hover {
+            background-color: rgba($color: #000000, $alpha: 0.1);
+        }
+        &:focus {
+            outline: none;
+        }
     }
-    &:hover {
-      background-color: rgba($color: #000000, $alpha: 0.1);
-    }
-    &:focus {
-      outline: none;
-    }
-  }
 }
 
 .logout {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  margin: 0 0 32px 16px;
-  mat-icon {
-    margin-right: 16px;
-  }
-  &:hover {
-    background-color: rgba($color: #000000, $alpha: 0.1);
-  }
-  &:focus {
-    outline: none;
-  }
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin: 0 0 32px 16px;
+    mat-icon {
+        margin-right: 16px;
+    }
+    &:hover {
+        background-color: rgba($color: #000000, $alpha: 0.1);
+    }
+    &:focus {
+        outline: none;
+    }
 }
 
 .router-container {
-  padding-left: 56px;
-  padding-top: 16px;
-  padding-right: 56px;
+    padding-left: 56px;
+    padding-top: 16px;
+    padding-right: 56px;
 }
 
 .search_field {
-  height: 18px;
-  width: 300px;
-  background-color: rgba(235, 235, 235, 0.35);
-  border: 0px;
-  border-radius: 7px;
-  padding: 5px;
-  margin-left: 150px;
-  &:focus {
-    outline: none;
-    background-color: rgb(248, 247, 247);
-  }
-  &:hover {
-    cursor: pointer;
-    opacity: 0.8;
-  }
+    height: 18px;
+    width: 300px;
+    background-color: rgba(235, 235, 235, 0.35);
+    border: 0px;
+    border-radius: 7px;
+    padding: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+    &:focus {
+        outline: none;
+        background-color: rgb(248, 247, 247);
+    }
+    &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+    }
 }
 
 .user-container {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  span {
-    font-size: 16px;
-  }
-  a {
     display: flex;
     align-items: center;
-  }
+    gap: 8px;
+    span {
+        font-size: 16px;
+    }
+    a {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .profile-picture {
-  width: 24px;
-  height: 24px;
-  border-radius: 100%;
-  &:hover {
-    cursor: pointer;
-    opacity: 0.8;
-  }
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+    }
 }
 
 @media (max-width: 1000px) {
-  .router-container {
-    padding-left: 8px;
-    padding-right: 8px;
-  }
-  .search_field {
-    margin-left: 20px;
-    max-width: 40%;
-  }
-  .headline {
-    display: none;
-  }
-  .menu-icon {
-    margin-right: 0;
-  }
-  // .profile {
-  //     margin-left: -120px;
-  // }
-  .mat-drawer-container {
-    overflow-x: hidden;
-  }
+    .router-container {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+    .search_field {
+        margin-left: 20px;
+        width: 70%;
+    }
+    .headline {
+        display: none;
+    }
+    .menu-icon {
+        margin-right: 0;
+    }
+    // .profile {
+    //     margin-left: -120px;
+    // }
+    .mat-drawer-container {
+        overflow-x: hidden;
+    }
+}
+
+@media (max-width: 700px) {
+    .user-name {
+        display: none;
+    }
 }
