--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -4,8 +4,16 @@
     <div class="massages">
         <mat-card class="message" *ngFor="let message of this.messages">
             <div class="post-headline">
-                <!-- <img class="profile" src="{{ message.photoURL }">  -->
-                {{ message.displayName }}
+
+                <img class="profile" src="{{ message.photoURL }}" alt=""> {{ message.displayName }}
+
+                <button *ngIf="message.uid == this.currentUserId" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                <mat-menu #userMenu="matMenu">
+                    <button mat-menu-item (click)="editMessage()">Edit</button>
+                    <button mat-menu-item (click)="deleteMessage()">Delete</button>
+                </mat-menu>
             </div>
             <div>
                 {{ message.message }}
