--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,45 +1,69 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-        <div class="logo-container" (click)="drawer.toggle()">LOGO</div>
+  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <div class="logo-container" (click)="drawer.toggle()">LOGO</div>
 
-        <ul class="menu-items">
-            <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active">
-                # welcome
-            </li>
-            <li *ngFor="let channel of this.firestoreService.allChannels" (click)="openChat('/chat/', channel.customIdName)">
-                #{{ channel.channelName }}
-            </li>
-            <li (click)="openDialog()">
-                <mat-icon>add</mat-icon>Create New-Chat</li>
-            <li (click)="this.authService.logOut()">
-                <mat-icon>logout</mat-icon>Log Out
-            </li>
-        </ul>
-    </mat-drawer>
+    <ul class="menu-items">
+      <li
+        [routerLink]="['/chat/welcome']"
+        routerLinkActive="router-link-active"
+      >
+        # welcome
+      </li>
+      <li
+        *ngFor="let channel of this.firestoreService.allChannels"
+        (click)="openChat('/chat/', channel.customIdName)"
+      >
+        #{{ channel.channelName }}
+      </li>
+      <li (click)="openDialog()"><mat-icon>add</mat-icon>Create New-Chat</li>
 
-    <div class="example-sidenav-content">
-        <mat-toolbar class="header">
-            <mat-toolbar-row>
-                <div class="header-left">
-                    <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-                    <span class="headline">Slack Clone</span>
-                    <input class="search_field hide_mobile" type="text" placeholder="search" />
-                </div>
-                <div *ngIf="authService.userData as user" class="user-container">
-                    <span class="user-name">{{ user.displayName }}</span>
-                    <a [routerLink]="['/chat/account']" routerLinkActive="router-link-active">
-                        <img class="profile-picture" src="{{
+      <ul class="menu-items">
+        Users
+        <li>User 1</li>
+        <li *ngFor="let user of this.firestoreService.allUsers">
+          {{ user.displayName }}
+        </li>
+      </ul>
+      <li (click)="this.authService.logOut()">
+        <mat-icon>logout</mat-icon>Log Out
+      </li>
+    </ul>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <mat-toolbar class="header">
+      <mat-toolbar-row>
+        <div class="header-left">
+          <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
+          <span class="headline">Slack Clone</span>
+          <input
+            class="search_field hide_mobile"
+            type="text"
+            placeholder="search"
+          />
+        </div>
+        <div *ngIf="authService.userData as user" class="user-container">
+          <span class="user-name">{{ user.displayName }}</span>
+          <a
+            [routerLink]="['/chat/account']"
+            routerLinkActive="router-link-active"
+          >
+            <img
+              class="profile-picture"
+              src="{{
                 user.photoURL
                   ? user.photoURL
                   : './../../../assets/img/blank_user.svg'
-              }}" alt="{{ user.displayName }}" />
-                    </a>
-                </div>
-            </mat-toolbar-row>
-        </mat-toolbar>
-
-        <div class="router-container">
-            <router-outlet></router-outlet>
+              }}"
+              alt="{{ user.displayName }}"
+            />
+          </a>
         </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+
+    <div class="router-container">
+      <router-outlet></router-outlet>
     </div>
+  </div>
 </mat-drawer-container>
