--- a/src/app/get-started/get-started.component.html
+++ b/src/app/get-started/get-started.component.html
@@ -1,7 +1,10 @@
 <div class="component-wrapper">
   <div class="comp-left">
     <div class="left-up">
-      <h1>Slack-Clone</h1>
+      <h1>
+        Slack-Clone
+        <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+      </h1>
 
       <h1>Bring's your the team together. <br />Wherever you are.</h1>
     </div>
