--- a/src/app/get-started/get-started.component.scss
+++ b/src/app/get-started/get-started.component.scss
@@ -4,11 +4,18 @@ h1 {
   letter-spacing: 2.25px;
   line-height: 120%;
   color: white;
+  display: flex;
+  align-items: center;
 }
 
 a {
   color: white;
   text-decoration: none;
+}
+
+.logo {
+  height: calc(16px + 9 * (100vw - 320px) / 240);
+  padding-left: 24px;
 }
 
 .component-wrapper {
@@ -70,5 +77,8 @@ a {
   .bg-img {
     width: 55vw;
     margin: 0;
+  }
+  .logo {
+    margin-left: 12px;
   }
 }
