--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,10 @@
 <div class="component-wrapper">
   <div class="sign-in-container">
-    <h1>Sign in to Slack</h1>
+    <h1>
+      Sign in to Slack
+      <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+    </h1>
+
     <span> We suggest using the email address that you use at work.</span>
     <button
       (click)="this.authService.googleAuth()"
