--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -11,7 +11,7 @@
                     <mat-icon>more_vert</mat-icon>
                   </button>
                 <mat-menu #userMenu="matMenu">
-                    <button mat-menu-item (click)="this.editMessage()">Edit</button>
+                    <button mat-menu-item (click)="this.dialogEditMessage(message)">Edit</button>
                     <button mat-menu-item (click)="this.firestoreService.deleteMessage(message)">Delete</button>
                 </mat-menu>
             </div>
