--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,71 +1,46 @@
 <div class="component-wrapper">
-  <div class="sign-in-container">
-    <h1>
-      Sign in to Slack
-      <img class="logo" src="./../../assets/images/logo.svg" alt="" />
-    </h1>
+    <div class="sign-in-container">
+        <h1>
+            Sign in to Slack
+            <img class="logo" src="./../../assets/images/logo.svg" alt="" />
+        </h1>
 
-    <span> We suggest using the email address that you use at work.</span>
-    <button
-      (click)="this.authService.googleAuth()"
-      class="width-25vw google-login"
-      mat-stroked-button
-      id="googleLogin"
-    >
+        <span> We suggest using the email address that you use at work.</span>
+        <button (click)="this.authService.googleAuth()" class="width-25vw google-login" mat-stroked-button id="googleLogin">
       <img class="google-icon" src="assets/images/googleicon.png" alt="" />Login
       with google account
     </button>
-    <p>OR</p>
+        <p>OR</p>
 
-    <form
-      type=""
-      [formGroup]="contactForm"
-      (submit)="onSubmit(this.userEmail.value, this.userPassword.value)"
-      ngNativeValidate
-    >
-      <p>
-        <mat-form-field appearance="outline">
-          <mat-label>Email</mat-label>
-          <input
-            class="width-25vw"
-            autocomplete="off"
-            type="email"
-            matInput
-            #userEmail
-            placeholder="Email"
-            formControlName="email"
-          />
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field appearance="outline" class="width-25vw">
-          <mat-label>Password</mat-label>
-          <input
-            autocomplete="off"
-            type="password"
-            matInput
-            #userPassword
-            placeholder="Password"
-            formControlName="password"
-          />
-        </mat-form-field>
-      </p>
+        <form type="" [formGroup]="contactForm" (submit)="onSubmit(this.userEmail.value, this.userPassword.value)" ngNativeValidate>
+            <p>
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input class="width-25vw" autocomplete="off" type="email" matInput #userEmail placeholder="Email" formControlName="email" />
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline" class="width-25vw">
+                    <mat-label>Password</mat-label>
+                    <input autocomplete="off" type="password" matInput #userPassword placeholder="Password" formControlName="password" />
+                </mat-form-field>
+            </p>
 
-      <button class="width-25vw" mat-raised-button color="login-button">
+            <button class="width-25vw" mat-raised-button color="login-button">
         Login
       </button>
-      <p>
-        <a (click)="this.openForgotPasswordDialog()">Forgot Password?</a>
-      </p>
-    </form>
-    <button mat-raised-button (click)="this.openGuestUserDialog()">
+            <p>
+                <a (click)="this.openForgotPasswordDialog()">Forgot Password?</a>
+            </p>
+        </form>
+        <button mat-raised-button (click)="this.openGuestUserDialog()">
       Login as guest
     </button>
-    <div class="to-sign-up">
-      <p>New to Slack-Clone?</p>
-      <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active"
-        >Sign up</a
+        <div class="to-sign-up">
+            <p>New to Slack-Clone?</p>
+            <a [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign up</a
       >
     </div>
   </div>
 </div>
+<a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
