working on directmessages

--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -1,1 +1,56 @@
-{{this.firestoreService.allUsers.displayName}
+<div class="chatroom">
+  <h2>{{ this.firestoreService.channel.channelName }}</h2>
+
+  <div class="massages" id="messageBox">
+    <mat-card
+      class="message"
+      *ngFor="let message of this.firestoreService.messages"
+    >
+      <div class="post-headline">
+        <img class="profile" src="{{ message.photoURL }}" alt="" />
+        {{ message.displayName }}
+
+        <button
+          *ngIf="message.uid == this.authService.userData.uid"
+          mat-icon-button
+          class="pin-right-upper-corner"
+          [matMenuTriggerFor]="userMenu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #userMenu="matMenu">
+          <button mat-menu-item>Edit</button>
+          <button
+            mat-menu-item
+            (click)="this.firestoreService.deleteMessage(message)"
+          >
+            Delete
+          </button>
+        </mat-menu>
+      </div>
+      <div>
+        {{ message.message }}
+      </div>
+    </mat-card>
+  </div>
+
+  <div class="message-container">
+    <mat-form-field appearance="fill">
+      <mat-label>Your Message</mat-label>
+      <textarea
+        [(ngModel)]="this.firestoreService.input"
+        matInput
+        cdkTextareaAutosize
+        #autosize="cdkTextareaAutosize"
+        cdkAutosizeMinRows="5"
+        cdkAutosizeMaxRows="10"
+      ></textarea>
+    </mat-form-field>
+    <button
+      mat-raised-button
+      (click)="this.firestoreService.postDirectmessage()"
+    >
+      Post
+    </button>
+  </div>
+</div>
