--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -38,7 +38,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Your Message</mat-label>
       <textarea
-        [(ngModel)]="this.firestoreService.input"
+        [(ngModel)]="this.firestoreService.dmInput"
         matInput
         cdkTextareaAutosize
         #autosize="cdkTextareaAutosize"
