--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -56,8 +56,8 @@
         <li>
             <span>Thomas DANIELSE</span>
             <ul>
-                <li><strong>Email: </strong> <a href="mailto: ">WIP</a></li>
-                <li><strong>Adresse: </strong>WIP</li>
+                <li><strong>Email: </strong> <a href="mailto: home@thomas-danielse.de">home@thomas-danielse.de</a></li>
+                <li><strong>Adresse: </strong>Frankfurter Straße 31, 70376 Stuttgart, DEUTSCHLAND</li>
             </ul>
         </li>
     </ul>
