added personal data to legal-notice

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -39,8 +39,9 @@
         <li>
             <span>Daniel JOHANNSEN</span>
             <ul>
-                <li><strong>Email: </strong> <a href="mailto: ">WIP</a></li>
-                <li><strong>Adresse: </strong>WIP</li>
+                <li><strong>Email: </strong> <a href="mailto: daniel-johannsen@web.de">daniel-johannsen@web.de</a></li>
+                <li><strong>Telefon: </strong> <a href="tel: +4915119429581">+49 151 19429581</a></li>
+                <li><strong>Adresse: </strong>Gasthausstraße 7, 46446 Emmerich am Rhein</li>
             </ul>
         </li>
         <br>
